models created TODO: views

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
         image: postgres:12.3
         volumes:
             - ~/postgres/llevame/dumps:/var/backups
+        ports:
+            - "5432:5432"
         environment:
             - POSTGRES_DB=postgres
             - POSTGRES_USER=postgres
