Changed container so it can be developed inside it

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,6 @@ services:
             context: .
         ports:
             - "8000:8000"
-        volumes:
-            - ./app:/home/llevame/app
         command: sh -c "dockerize -wait tcp://db:5432 python app/manage.py runserver 0.0.0.0:8000"
         depends_on:
             - "db"
@@ -32,3 +30,5 @@ services:
         stdin_open: true
         working_dir: /home/llevame
         command: bash -c "cd llevame && npm install && npm start"
+        depends_on:
+            - "app"
