--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
 Django>=3.0,<3.1
-djangorestframework>= 3.9.0,<3.10.0
+djangorestframework>= 3.11.0,<3.12.0
 psycopg2-binary>=2.8.5,<2.9.0
+pillow>=7.1.2,<7.2
