--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,19 +4,21 @@ services:
     db:
         image: postgres:12.3
         volumes:
-            - ~/postgres/llevame/dumps:/var/backups
-        ports:
-            - "5432:5432"
+            - ~/postgres:/var/lib/postgresql/data
         environment:
             - POSTGRES_DB=postgres
             - POSTGRES_USER=postgres
             - POSTGRES_PASSWORD=postgres
+        ports:
+            - "5432:5432"
 
     app:
         build:
             context: .
         ports:
             - "8000:8000"
+        volumes:
+            - ./:/home/app/llevame/
         command: sh -c "dockerize -wait tcp://db:5432 python app/manage.py runserver 0.0.0.0:8000"
         depends_on:
             - "db"
@@ -26,9 +28,7 @@ services:
         ports:
             - "3000:3000"
         volumes:
-            - ./web:/home/llevame
+            - ./:/home/llevame
         stdin_open: true
-        working_dir: /home/llevame
-        command: bash -c "cd llevame && npm install && npm start"
-        depends_on:
-            - "app"
+        working_dir: /home/llevame/web/llevame
+        command: bash -c "npm install && npm start"
